--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -36,6 +36,12 @@ a i {
 	transition: all .3s;
 }
 
+@media (min-width: 768px) {
+	a:hover {
+		opacity: 0.6;
+	}
+}
+
 img {
 	max-width: 100%;
 	height: auto;
@@ -384,8 +390,8 @@ ul {
 		font-weight: 900;
 		font-size: 6rem;
 		color: #005BAC;
-		line-height: 1;
-		margin-bottom: 1.2rem;
+		line-height: 1.25;
+		margin-bottom: 0rem;
 	}
 }
 
@@ -573,11 +579,11 @@ ul {
 	font-family: "Noto Sans JP", serif;
 	font-weight: 700;
 	padding-right: 3.6rem;
-	padding-left: 7.7rem;
+	padding-left: 8.1rem;
 	padding-top: 1.5rem;
 	padding-bottom: 1.5rem;
-	border-radius: 3.4rem;
-	margin-top: 3rem;
+	border-radius: 3.5rem;
+	margin-top: 3.4rem;
 }
 
 @media (min-width: 768px) {
@@ -608,7 +614,7 @@ ul {
 	padding-right: 3.6rem;
 	padding-left: 3.6rem;
 	padding-top: 3.8rem;
-	padding-bottom: 2.8rem;
+	padding-bottom: 4.0rem
 }
 
 @media (min-width: 768px) {
@@ -629,7 +635,7 @@ ul {
 	font-weight: 400;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 1.1rem;
+	margin-bottom: .9rem;
 }
 
 @media (min-width: 768px) {
@@ -647,9 +653,9 @@ ul {
 
 .apply__button-text {
 	display: block;
-	border-radius: 3rem;
+	border-radius: 3.5rem;
 	width: 30.4rem;
-	height: 6.7rem;
+	height: 6.9rem;
 	background: linear-gradient(to right, #0573E1, #53A2F0);
 	text-align: center;
 	position: relative;
@@ -660,13 +666,12 @@ ul {
 	font-weight: 700;
 	margin-left: auto;
 	margin-right: auto;
-	margin-bottom: 1.2rem;
 }
 
 @media (min-width: 768px) {
 	.apply__button-text {
 		display: block;
-		border-radius: 4rem;
+		border-radius: 3.5rem;
 		width: 35.9rem;
 		height: 7.7rem;
 		background: linear-gradient(to right, #0573E1, #53A2F0);
@@ -1015,14 +1020,14 @@ ul {
 ------------------------------------------ */
 .course-00 {
 	padding-top: 3.1rem;
-	margin-bottom: 6.3rem;
-	padding-top: 50px;
-	margin-top: -50px;
+	margin-bottom: 6.5rem;
+	padding-top: 7.9rem;
+	margin-top: -5.0rem;
 }
 
 @media (min-width: 768px) {
 	.course-00 {
-		padding-top: 3.9rem;
+		padding-top: 8.9rem;
 		margin-bottom: 6.6rem;
 		padding-right: 1.6rem;
 		padding-left: 1.6rem;
@@ -1044,7 +1049,7 @@ ul {
 	color: #333;
 	text-align: center;
 	margin-top: 2.9rem;
-	padding-bottom: 1.7rem;
+	padding-bottom: 1.8rem;
 	margin-left: 1.6rem;
 }
 
@@ -1057,6 +1062,7 @@ ul {
 		text-align: center;
 		margin-top: 2.9rem;
 		padding-bottom: 2.7rem;
+		margin-right: 1.6rem;
 	}
 }
 
@@ -1079,12 +1085,12 @@ ul {
 }
 
 .course__tab-content-item--text>picture {
-	margin-top: .1rem;
+	margin-top: .6rem;
 }
 
 @media (min-width: 768px) {
 	.course__tab-content-item--text>picture {
-		margin-top: .3rem;
+		margin-top: .7rem;
 	}
 }
 
@@ -1198,10 +1204,10 @@ ul {
 
 @media (min-width: 768px) {
 	.tab.st>.nav {
-		column-gap: 1.5rem;
 		flex-direction: row !important;
 		padding-left: 0rem;
 		padding-right: 0rem;
+		column-gap: 3.5rem
 	}
 }
 
@@ -1258,14 +1264,14 @@ ul {
 ------------------------------------------ */
 .cost-00 {
 	padding-top: 3.2rem;
-	padding-top: 50px;
-	margin-top: -50px;
+	padding-top: 8.3rem;
+	margin-top: -5rem;
 }
 
 .cost__container {
 	padding-right: 1.6rem;
 	padding-left: 1.6rem;
-	margin-bottom: 6.2rem;
+	margin-bottom: 6.4rem;
 }
 
 @media (min-width: 768px) {
@@ -1282,8 +1288,8 @@ ul {
 	font-size: 2.8rem;
 	color: #333;
 	text-align: center;
-	margin-top: 2.9rem;
-	padding-bottom: 1.7rem;
+	margin-top: 2.6rem;
+	padding-bottom: 1.6rem;
 	margin-left: 1.6rem;
 }
 
@@ -1344,8 +1350,8 @@ td {
 	font-weight: 400;
 	font-size: 1.6rem;
 	color: #333;
-	width: 46%;
-	height: 6.4rem;
+	width: 45%;
+	height: 6.6rem;
 	padding-right: 1.4rem;
 }
 
@@ -1387,7 +1393,7 @@ td {
 	color: #F23397;
 	height: 6.34rem;
 	padding-left: 5.2rem;
-	padding-top: .9rem;
+	padding-top: .6rem;
 }
 
 @media (min-width: 768px) {
@@ -1410,7 +1416,7 @@ td {
 	color: #F23397;
 	height: 6.3rem;
 	padding-left: 4.7rem;
-	padding-top: .9rem;
+	padding-top: .6rem;
 }
 
 @media (min-width: 768px) {
@@ -1433,7 +1439,7 @@ td {
 	color: #F23397;
 	height: 6.1rem;
 	padding-left: 6.2rem;
-	padding-top: .9rem;
+	padding-top: .6rem;
 }
 
 @media (min-width: 768px) {
@@ -1497,7 +1503,7 @@ td {
 	.question__text {
 		position: absolute;
 		bottom: 40.4%;
-		left: 19.1%;
+		left: 38.1%;
 		color: #fff;
 		font-family: "Noto Sans JP", serif;
 		font-weight: 700;
@@ -1542,7 +1548,7 @@ td {
 	text-align: center;
 	padding-left: 1.5rem;
 	background-color: #ddd;
-	padding-bottom: 2.9rem;
+	padding-bottom: 2.7rem;
 }
 
 @media (min-width: 768px) {
@@ -1551,7 +1557,7 @@ td {
 		text-align: center;
 		padding-left: 0rem;
 		background-color: #ddd;
-		padding-bottom: 6.9rem;
+		padding-bottom: 4.6rem;
 	}
 }
 
