--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -34,12 +34,12 @@ a {
 a,
 a:hover,
 a i {
-	transition: all .3s;
+	transition: opacity .3s;
 }
 
 @media (min-width: 768px) {
 	a:hover {
-		opacity: 0.6;
+		opacity: .6;
 	}
 }
 
@@ -166,7 +166,7 @@ ul {
 		flex-direction: column;
 		top: 7rem;
 		background-color: #005BAC;
-		transition: all 0.6s;
+		transition: opacity .6s;
 		transform: translateX(100%);
 		left: 0rem;
 		right: 0rem;
@@ -1092,13 +1092,19 @@ ul {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
+		transition: transform 0.6s;
 	}
 }
 
 @media (min-width: 768px) {
 	.course__tab-content-item--link img:hover {
 		transform: scale(1.2);
-		transition: transform 0.6s;
+	}
+}
+
+@media (min-width: 768px) {
+	.course__tab-content-item>a {
+		opacity: 1;
 	}
 }
 
@@ -1534,6 +1540,12 @@ td {
 	}
 }
 
+@media (min-width: 768px) {
+	.question>a {
+		opacity: 1;
+	}
+}
+
 .question__text {
 	position: absolute;
 	bottom: 39.1%;
@@ -1579,6 +1591,7 @@ td {
 	.search img {
 		object-fit: cover;
 		transition: transform 0.6s;
+		opacity: 1;
 	}
 }
 
@@ -1587,6 +1600,13 @@ td {
 		transform: scale(1.2);
 	}
 }
+
+@media (min-width: 768px) {
+	.search>a {
+		opacity: 1;
+	}
+}
+
 
 .search__text {
 	position: absolute;
