--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -252,44 +252,51 @@ ul {
 ------------------------------------------ */
 .cover {
 	margin-top: 7rem;
-	position: relative;
 	margin-bottom: 2.4rem;
+	height: 25rem;
 }
+
 
 @media (min-width: 768px) {
 	.cover {
 		margin-top: 10.1rem;
-		position: relative;
 		margin-bottom: 2.4rem;
 		height: 65.1rem;
-		margin-left: auto;
-		margin-right: auto;
 	}
 }
 
-.cover img {
+.cover__image {
+	background-image: url("../image/cover_main_sp_01.png");
 	width: 100%;
+	height: 100%;
+	background-position: center;
+	background-size: cover;
 }
 
 @media (min-width: 768px) {
-	.cover img {
+	.cover__image {
+		background-image: url("../image/cover_main_pc_01.png");
 		width: 100%;
 		height: 100%;
-		object-fit: cover;
+		background-position: center;
+		background-size: cover;
 	}
 }
 
 .cover__wrapper {
-	position: absolute;
-	top: 13.9%;
-	left: 4.3%;
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 34.3rem;
+	padding-top: 3.5rem;
+
 }
 
 @media (min-width: 768px) {
 	.cover__wrapper {
-		position: absolute;
-		top: 16%;
-		left: 21.3%;
+		margin-left: auto;
+		margin-right: auto;
+		max-width: 110rem;
+		padding-top: 10.5rem;
 	}
 }
 
