--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -311,7 +311,7 @@ ul {
 	.badge {
 		display: flex;
 		flex-direction: row;
-		row-gap: 0.4375rem;
+		row-gap: .4375rem;
 		margin-bottom: 2.9rem;
 	}
 }
@@ -1099,7 +1099,7 @@ ul {
 		width: 100%;
 		height: 100%;
 		object-fit: cover;
-		transition: transform 0.6s;
+		transition: transform .6s;
 	}
 }
 
@@ -1537,7 +1537,7 @@ td {
 @media (min-width: 768px) {
 	.question img {
 		object-fit: cover;
-		transition: transform 0.6s;
+		transition: transform .6s;
 	}
 }
 
@@ -1597,7 +1597,7 @@ td {
 @media (min-width: 768px) {
 	.search img {
 		object-fit: cover;
-		transition: transform 0.6s;
+		transition: transform .6s;
 		opacity: 1;
 	}
 }
