--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -166,8 +166,8 @@ ul {
 		flex-direction: column;
 		top: 7rem;
 		background-color: #005BAC;
-		transition: opacity .6s;
 		transform: translateX(100%);
+		transition: transform 0.6s;
 		left: 0rem;
 		right: 0rem;
 		padding-left: 2rem;
@@ -649,13 +649,13 @@ ul {
 		font-weight: 400;
 		margin-left: auto;
 		margin-right: auto;
-		margin-bottom: 1.7rem;
+		margin-bottom: 1.9rem;
 	}
 }
 
 .apply__button-text {
 	display: block;
-	border-radius: 3.5rem;
+	border-radius: 3.45rem;
 	width: 30.4rem;
 	height: 6.9rem;
 	background: linear-gradient(to right, #0573E1, #53A2F0);
@@ -673,9 +673,9 @@ ul {
 @media (min-width: 768px) {
 	.apply__button-text {
 		display: block;
-		border-radius: 3.5rem;
+		border-radius: 3.75rem;
 		width: 35.9rem;
-		height: 7.7rem;
+		height: 7.5rem;
 		background: linear-gradient(to right, #0573E1, #53A2F0);
 		text-align: center;
 		position: relative;
@@ -1024,7 +1024,7 @@ ul {
 @media (min-width: 768px) {
 	.course-00 {
 		padding-top: 8.9rem;
-		margin-bottom: 6.6rem;
+		padding-bottom: 0.8rem;
 		padding-right: 1.6rem;
 		padding-left: 1.6rem;
 	}
@@ -1045,7 +1045,7 @@ ul {
 	color: #333;
 	text-align: center;
 	margin-top: 2.9rem;
-	padding-bottom: 1.8rem;
+	padding-bottom: 1.7rem;
 	margin-left: 1.6rem;
 }
 
@@ -1076,16 +1076,27 @@ ul {
 		flex-direction: row;
 		justify-content: start;
 		column-gap: 1.2rem;
-		padding-bottom: 3.4rem;
-		margin-top: 1.6rem;
+		width: fit-content;
 	}
 }
+
+.course__tab-content-item--link-text img {
+	width: 1.38rem;
+	height: 1.184rem;
+}
+
+@media (min-width: 768px) {
+	.course__tab-content-item--link-text img {
+		width: 1.847rem;
+		height: 1.584rem;
+	}
+}
+
 
 @media (min-width: 768px) {
 	.course__tab-content-item--link {
 		display: block;
 		width: 53.2rem;
-		height: 32.9rem;
 		overflow: hidden;
 		border-bottom-left-radius: 1rem;
 		border-bottom-right-radius: 1rem;
@@ -1094,20 +1105,6 @@ ul {
 	}
 }
 
-@media (min-width: 768px) {
-	.course__tab-content-item--link img {
-		width: 100%;
-		height: 100%;
-		object-fit: cover;
-		transition: transform .6s;
-	}
-}
-
-@media (min-width: 768px) {
-	.course__tab-content-item--link img:hover {
-		transform: scale(1.2);
-	}
-}
 
 @media (min-width: 768px) {
 	.course__tab-content-item>a {
@@ -1127,20 +1124,12 @@ ul {
 
 .tab-content {
 	background-color: #F2F9FF;
-	padding-right: 1.6rem;
-	padding-left: 1.6rem;
-	padding-top: 2.6rem;
-	padding-bottom: 2.7rem;
 }
 
 
 @media (min-width: 768px) {
 	.tab-content {
 		background-color: #F2F9FF;
-		padding-right: 0rem;
-		padding-left: 0rem;
-		padding-top: 3rem;
-		padding-bottom: 0rem;
 		border-bottom-left-radius: 1.2rem;
 		border-bottom-right-radius: 1.2rem;
 	}
@@ -1160,11 +1149,21 @@ ul {
 
 @media (min-width: 768px) {
 	.course__tab-content-item--link img {
-		margin-bottom: 1.4rem;
 		width: 100%;
-		margin-top: .2rem;
+		height: 100%;
+		margin-top: .5rem;
+		margin-bottom: 1.4rem;
+		object-fit: cover;
+		transition: transform .6s;
 	}
 }
+
+@media (min-width: 768px) {
+	.course__tab-content-item--link img:hover {
+		transform: scale(1.2);
+	}
+}
+
 
 .course__tab-content-item {
 	margin-bottom: 2.4rem;
@@ -1187,9 +1186,10 @@ ul {
 	.course__tab-content-wrapper {
 		display: flex;
 		flex-wrap: wrap;
-		column-gap: 3.2rem;
-		padding-left: 3.2rem;
-		padding-right: 3.2rem;
+		column-gap: 3.1rem;
+		padding-left: 1.6rem;
+		padding-right: 1.6rem;
+		row-gap: 3.1rem;
 	}
 }
 
@@ -1226,10 +1226,10 @@ ul {
 }
 
 .st>.tab-content>.tab-pane {
-	padding-left: 0rem !important;
-	padding-right: 0rem !important;
-	padding-top: 0rem !important;
-	padding-bottom: 0rem !important;
+	padding-left: 1.6rem;
+	padding-right: 1.6rem;
+	padding-top: 2.7rem;
+	padding-bottom: 2.7rem;
 }
 
 .tab.st>.nav {
@@ -1510,48 +1510,52 @@ td {
 
 /*よくあるご質問、教室検索
 ------------------------------------------ */
-.question {
+
+.question-link {
 	position: relative;
 }
 
 @media (min-width: 768px) {
-	.question {
+	.question-link {
+		position: relative;
 		width: 50%;
 		overflow: hidden;
 	}
 }
 
-@media (min-width: 768px) {
-	.question__container {
-		display: flex;
-		flex-direction: row;
-		height: 32rem;
-	}
-}
-
-.question img {
+.footer-link__image {
 	width: 100%;
 	height: 100%;
 }
 
+
 @media (min-width: 768px) {
-	.question img {
+	.footer-link__image {
 		object-fit: cover;
 		transition: transform .6s;
+		opacity: 1;
+		height: 100%;
 	}
 }
 
 @media (min-width: 768px) {
-	.question img:hover {
+	.question-link img:hover {
 		transform: scale(1.2);
 	}
 }
 
 @media (min-width: 768px) {
-	.question>a {
+	.footer-link__image  img:hover {
+		transform: scale(1.2);
+	}
+}
+
+@media (min-width: 768px) {
+	.question-link {
 		opacity: 1;
 	}
 }
+
 
 .question__text {
 	position: absolute;
@@ -1563,12 +1567,12 @@ td {
 	font-size: 2.2rem;
 }
 
-
 @media (min-width: 768px) {
 	.question__text {
 		position: absolute;
-		bottom: 40.4%;
-		left: 38.1%;
+		top: 48%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		color: #fff;
 		font-family: "Noto Sans JP", serif;
 		font-weight: 700;
@@ -1576,40 +1580,49 @@ td {
 	}
 }
 
-.search {
+@media (min-width: 768px) {
+	.question__container {
+		display: flex;
+		flex-direction: row;
+	}
+}
+
+
+.search-link {
 	position: relative;
 }
 
 @media (min-width: 768px) {
-	.search {
+	.search-link {
 		position: relative;
 		width: 50%;
 		overflow: hidden;
 	}
 }
 
-.search img {
+.footer-link__image {
 	width: 100%;
 	height: 100%;
 }
 
 
 @media (min-width: 768px) {
-	.search img {
+	.footer-link__image {
 		object-fit: cover;
 		transition: transform .6s;
 		opacity: 1;
+		height: 100%;
 	}
 }
 
 @media (min-width: 768px) {
-	.search img:hover {
+	.search-link img:hover {
 		transform: scale(1.2);
 	}
 }
 
 @media (min-width: 768px) {
-	.search>a {
+	.question-link {
 		opacity: 1;
 	}
 }
@@ -1628,8 +1641,9 @@ td {
 @media (min-width: 768px) {
 	.search__text {
 		position: absolute;
-		bottom: 40.4%;
-		left: 34.9%;
+		top: 48%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 		color: #fff;
 		font-family: "Noto Sans JP", serif;
 		font-weight: 700;
